--- a/fact-flow/src/App.css
+++ b/fact-flow/src/App.css
@@ -36,3 +36,107 @@
     transform: rotate(360deg);
   }
 }
+
+.nav-link {
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: opacity 0.3s;
+}
+
+.nav-link:hover {
+  opacity: 0.6; /* Reduce opacity on hover */
+}
+
+.landing-page {
+  background-image: url('components/weirdbackground.svg');
+  background-size: cover; 
+  background-position: center; 
+}
+
+.query-container {
+  background-color: #282c34;
+  border: 3px solid #444;
+  width: 70%;
+}
+
+.sidebar {
+  background-color: #ffffff;
+  width: 20%; /* Adjust the width as needed */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: fixed;
+  top: 0;
+  right: 0; /* Position the sidebar on the right */
+  transition: width 0.3s;
+  margin-top: 10vh;
+}
+
+
+.sidebar-content {
+  padding: 10px;
+  width: 95%;
+  height: 95%;
+}
+
+/* Fileview styles */
+
+.file-container {
+  background-color: #eaeaea;
+  border: 0px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.file-container-title {
+  margin-bottom: 10px;
+}
+
+.inner-file-container {
+  display: flex;
+  flex-direction: column; /* Change to column */
+}
+
+.section-title {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.folders-container,
+.queries-container {
+  margin-bottom: 20px; /* Add margin between sections */
+}
+
+.folders,
+.queries {
+  /* Remove flex and flex-wrap properties */
+}
+
+.folder-item,
+.query-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.folder-item img,
+.query-item img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.folder-name,
+.query-name {
+  margin: 0;
+  font-size: 1rem;
+}
