--- a/fact-flow/src/components/query_Page/search.scss
+++ b/fact-flow/src/components/query_Page/search.scss
@@ -12,7 +12,7 @@
 }
 
 // Setup
-body { display: flex; align-items: center; justify-content: center; min-height: 100vh }
+// body { display: flex; align-items: center; justify-content: center; min-height: 100vh }
 html { box-sizing: border-box; height: 100%; font-size: 10px; } *, *::before, *::after { box-sizing: inherit; }
 
 // // Main styles
@@ -36,7 +36,7 @@ input, button {
 }
 input[type="search"] {
   outline: 0; // <-- shold probably remove this for better accessibility, adding for demo aesthetics for now.
-  width: 100%;
+  width: 80%;
   background: var(--color-light);
   padding: 0 1.6rem;
   border-radius: var(--rad);
@@ -48,7 +48,7 @@ input[type="search"] {
 }
 button {
   display: none; // prevent being able to tab to it
-  position: absolute;
+  // position: absolute;
   top: 0;
   right: 0;
   width: var(--btn-width);
@@ -58,15 +58,15 @@ button {
 }
 input:not(:placeholder-shown) {
   border-radius: var(--rad) 0 0 var(--rad);
-  width: calc(100% - var(--btn-width));
+  width: calc(88% - var(--btn-width));
   + button {
     display: block;
   }
 }
 label {
-  position: absolute;
+  // position: absolute;
   clip: rect(1px, 1px, 1px, 1px);
-  padding: 0;
+  padding: 100px;
   border: 0;
   height: 1px;
   width: 1px;
