--- a/fact-flow/src/components/query_Page/refCard.scss
+++ b/fact-flow/src/components/query_Page/refCard.scss
@@ -53,7 +53,7 @@ body {
 
 .card-ref {
 	border-radius: 16px;
-	box-shadow: 35px 30px 30px -25px rgba(#4133B7, .25);
+	box-shadow: 35px 30px 30px -25px rgba(#7CC0E9, .25);
 	max-width: 100vw;
     margin: 2vw;
 }
@@ -64,12 +64,12 @@ body {
 
 	.tag {
 		display: inline-block;
-		background-color: var(--c-titan-white);
-		color: var(--c-indigo);
+		background-color: #c2d9e7;
+		color: #27a1ec;
 		font-weight: 600;
-		font-size: 0.975rem;
+		font-size: 1.125rem;
 		padding: 0.5em 0.75em;
-		line-height: 1;
+		line-height: 2;
 		border-radius: 6px;
 		& + * {
 			margin-top: 1rem;
@@ -78,7 +78,7 @@ body {
 
 	.title-ref {
 		font-size: 2rem;
-		color: var(--c-void);
+		// color: var(--c-void);
 		line-height: 1.25;
 		& + * {
 			margin-top: 1rem;
@@ -112,135 +112,4 @@ body {
 			color: var(--c-white);
 		}
 	}
-	
-	.details {
-		display: flex;
-		gap: 1rem;
-		div {
-			padding: .75em 1em;
-			background-color: var(--c-titan-white);
-			border-radius: 8px;
-			display: flex;
-			flex-direction: column-reverse;
-			gap: .125em;
-			flex-basis: 50%;
-		}
-		
-		dt {
-			font-size: .875rem;
-			color: var(--c-cold-purple);
-		}
-		
-		dd {
-			color: var(--c-indigo);
-			font-weight: 600;
-			font-size: 1.25rem;
-		}
-	}
-}
-
-
-.plan {
-	padding: 10px;
-	background-color: var(--c-white);
-	color: var(--c-del-rio);
-	
-	strong {
-		font-weight: 600;
-		color: var(--c-coffee);
-	}
-	
-	.inner {
-		padding: 20px;
-		padding-top: 40px;
-		background-color: var(--c-fair-pink);
-		border-radius: 12px;
-	position: relative;
-		overflow: hidden;
-	}
-	
-	.pricing {
-		position: absolute;
-		top: 0;
-		right: 0;
-		background-color: var(--c-apricot);
-		border-radius: 99em 0 0 99em;
-		display: flex;
-		align-items: center;
-		padding: .625em .75em;
-		font-size: 1.25rem;
-		font-weight: 600;
-		color: var(--c-coffee);
-		small {
-			color: var(--c-del-rio);
-			font-size: .75em;
-			margin-left: .25em;
-		}
-		
-	}
-	
-	.title {
-		font-weight: 600;
-		font-size: 1.25rem;
-		color: var(--c-coffee);
-		& + * {
-			margin-top: .75rem;
-		}
-	}
-	
-	.info {
-		& + * {
-			margin-top: 1rem;
-		}
-	}
-	
-	.features {
-		display: flex;
-		flex-direction: column;
-		li {
-			display: flex;
-			align-items: center;
-			gap: .5rem;
-			& + * {
-				margin-top: .75rem;
-			}
-		}
-		
-		.icon {
-			background-color: var(--c-java);
-			display: inline-flex;
-			align-items: center;
-			justify-content: center;
-			color: var(--c-white);
-			border-radius: 50%;
-			width: 20px;
-			height: 20px;
-			svg {
-				width: 14px;
-				height: 14px;
-			}
-		}
-		
-		& + * {
-			margin-top: 1.25rem;
-		}
-	}
-	
-	button {
-		font: inherit;
-		background-color: var(--c-indigo);
-		border-radius: 6px;
-		color: var(--c-white);
-		font-weight: 500;
-		font-size: 1.125rem;
-		width: 100%;
-		border: 0;
-		padding: 1em;
-		&:hover,
-		&:focus {
-			background-color: var(--c-governor);
-		}
-	}
-	
-	
 }
