--- a/fact-flow/src/App.css
+++ b/fact-flow/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&display=swap");
+
 .App {
   text-align: center;
   width: 100%;
