--- a/fact-flow/src/components/query_Page/refCard.scss
+++ b/fact-flow/src/components/query_Page/refCard.scss
@@ -46,17 +46,24 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	gap: 100rem;
-	width: 100%;
-	max-width: 100vw;
+	width: 33vw;
 	// margin: 5vh auto;
 }
 
 .card-ref {
 	border-radius: 16px;
 	box-shadow: 35px 30px 30px -25px rgba(#7CC0E9, .25);
-	max-width: 100vw;
+	max-width: 33vw;
     margin: 2vw;
 }
+
+.link-ref {
+	display: inline-block; /* Ensure the link takes only the necessary space */
+	max-width: 100%; /* Limit the width to 100% of its container */
+	overflow: hidden; /* Hide any content that overflows */
+	text-overflow: ellipsis; /* Display an ellipsis (...) to indicate truncated text */
+	white-space: nowrap; /* Prevent wrapping of the text */
+  }
 
 .information {
 	background-color: var(--c-white);
@@ -74,6 +81,7 @@ body {
 		& + * {
 			margin-top: 1rem;
 		}
+		max-width: 100%;
 	}
 
 	.title-ref {
