updated frontend, mobile sizing, removed account and chat links

--- a/fact-flow/src/components/query_Page/refCard.scss
+++ b/fact-flow/src/components/query_Page/refCard.scss
@@ -50,6 +50,15 @@ body {
 	// margin: 5vh auto;
 }
 
+@media only screen and (max-width: 600px) {
+	.cards-ref {
+		width: 100%;
+	}
+	.card-ref {
+		max-width: 90vw;
+	}
+  }
+
 .card-ref {
 	border-radius: 16px;
 	box-shadow: 35px 30px 30px -25px rgba(#7CC0E9, .25);
